--- a/src/app/count-down/count-down.component.html
+++ b/src/app/count-down/count-down.component.html
@@ -1,3 +1,7 @@
+<mat-card>
+  <mat-card-header>Count Down</mat-card-header>
+  
+</mat-card>
 <span>{{ countDownRemain }}</span>
 <p>
   <button (click)="restartCountDown()">Restart</button>
