adding mat cards

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 body {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   color: #223;
 }
 
