--- a/src/app/count-down/count-down.component.html
+++ b/src/app/count-down/count-down.component.html
@@ -1,6 +1,14 @@
 <mat-card>
-  <mat-card-header>Count Down</mat-card-header>
-  <img src="{{ numberPath }}" mat-card-image />
+  <mat-card-header>
+    <mat-card-title>Count Down</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>{{ countDownRemain }}</mat-card-title>
+      </mat-card-header>
+    </mat-card>
+  </mat-card-content>
   <mat-card-actions>
     <button (click)="restartCountDown()" mat-icon-button>
       <mat-icon>redo</mat-icon>
