--- a/src/app/count-down/count-down.component.html
+++ b/src/app/count-down/count-down.component.html
@@ -3,10 +3,8 @@
   <mat-card-content>
     <span class="count-down-remain">{{ countDownRemain }}</span
     ><br />
-    <button (click)="restartCountDown()" mat-icon-button>
-      <mat-icon class="count-down-redo-button" matTooltip="test">
-        redo
-      </mat-icon>
+    <button (click)="restartCountDown()" mat-icon-button matTooltip="restart">
+      <mat-icon class="count-down-redo-button"> redo </mat-icon>
     </button>
   </mat-card-content>
 </mat-card>
